<resources>
    <string name="app_name">Conexão Pororoca</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Conexão Pororoca</string>
    <string name="nav_header_subtitle">contato.conexaopororoca@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Player</string>
    <string name="menu_share">Compartilhar</string>
    <string name="menu_prog">Programação</string>
    <string name="menu_gallery">Galeria de Imagens</string>
    <string name="menu_slideshow">Vídeos</string>
    <string name="menu_whatsapp">Whatsapp</string>
    <string name="menu_site">Site da Rádio</string>

    <string name="logo_splash">Logo conexão pororoca</string>

    <string name="c_pororoca">Todos os direitos reservados</string>
    <string name="title_contato">Contato</string>
    <string name="title_site">Site</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_menos">vol -</string>
    <string name="btn_play">play</string>
    <string name="btn_mais">vol +</string>
    <string name="todo">TODO</string>
    <string name="subtitulo">Trazendo felicidade através da música todos os dias!</string>

    <!-- table -->
    <string name="segunda">Segunda-feira</string>
    <string name="terca">Terça-feira</string>
    <string name="quarta">Quarta-feira</string>
    <string name="quinta">Quinta-feira</string>
    <string name="sexta">Sexta-feira</string>
    <string name="sabado">Sábado</string>
    <string name="domingo">Domingo</string>

    <string name="empty">Sem programação</string>



</resources>