<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_music_note_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_prog"
            android:icon="@drawable/ic_baseline_calendar_today_24"
            android:title="@string/menu_prog" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
    </group>

    <item android:title="@string/title_contato">
        <menu>
            <item
                android:id="@+id/nav_contato"
                android:icon="@drawable/ic_baseline_send_24"
                android:title="@string/menu_whatsapp" />
        </menu>
    </item>

    <item android:title="@string/title_site">
        <menu>
            <item
                android:id="@+id/nav_site"
                android:icon="@drawable/ic_baseline_alternate_email_24"
                android:title="@string/menu_site" />
        </menu>
    </item>


</menu>