<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gallery.GalleryFragment">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:stretchColumns="0,1,2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="#000000"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:textColor="#000"
                android:gravity="center"
                android:text="@string/segunda"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_margin="1dp"
                android:textColor="#000"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/empty"
                android:textAppearance="?android:attr/textAppearanceLarge"
                />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="#000000">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:textColor="#000"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/terca"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_margin="1dp"
                android:textColor="#000"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/empty"
                android:textAppearance="?android:attr/textAppearanceLarge" />


        </TableRow>


        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="#000000">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_margin="1dp"
                android:textStyle="bold"
                android:textColor="#000"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/quarta"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:textColor="#000"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/empty"
                android:textAppearance="?android:attr/textAppearanceLarge" />


        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="#000000">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_margin="1dp"
                android:textColor="#000"
                android:textStyle="bold"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/quinta"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:textColor="#000"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/empty"
                android:textAppearance="?android:attr/textAppearanceLarge" />


        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="#000000">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:textStyle="bold"
                android:textColor="#000"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/sexta"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:textColor="#000"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/empty"
                android:textAppearance="?android:attr/textAppearanceLarge" />


        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="#000000">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:textStyle="bold"
                android:textColor="#000"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/sabado"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:textColor="#000"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/empty"
                android:textAppearance="?android:attr/textAppearanceLarge" />


        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="#000000">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:textStyle="bold"
                android:textColor="#000"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/domingo"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:textColor="#000"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/empty"
                android:textAppearance="?android:attr/textAppearanceLarge" />


        </TableRow>


    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>